--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -301,7 +301,7 @@ Hatha Yoga, Rainbow Yoga Kids and Synergy Partner Yoga.</p>
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_laura.jpg' %}" alt="Laura Vogel im Urban Zürich Acro festival" class="img-responsive"></div>
                     <h3 class="name">Laura Vogel</h3>
                     <p class="text-alt"><small>Laura</small></p>
-                    <p class="about">Originaly from Berlin. She is a choregrapher, performer and teacher in Zürich. </p>
+                    <p class="about">Originaly from Berlin. She is a choregrapher, performer and teacher in Zürich. We're happy to have her at the Fest sharing her vast experience and good vibes!</p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
@@ -405,9 +405,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day1_main_time3" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Content of bouth Workshops to be confirmed.</p>
-                                                    <strong class="highlight speaker-name">To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">To be confirmed</strong>
+                                                    <p class="description">Workshop 1: Trio Moves <br>
+                                                    <strong class="highlight speaker-name">Salvatore + Acrolama</strong><br>
+                                                    Workshop 2: Basic Alignments<br>
+                                                    <strong class="highlight speaker-name">Phillip & Kath</strong>
+                                                    </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -441,9 +443,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day1_main_time5" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                        <p class="description">Workshop 1: Workshops to build up some simple basics to share some healing arts during this weekend! Learn how less can be more.</p>
-                                                    <strong class="highlight speaker-name">Danica Wagner</strong>
-                                                    <strong class="highlight speaker-name">Teacher 2: To be Confirmed</strong>
+                                                    <p class="description">Workshop 1: Freaky Flows <br>
+                                                    <strong class="highlight speaker-name">Acrolama</strong><br>
+                                                    Workshop 2: Thai Massage<br>
+                                                    <strong class="highlight speaker-name">Larissa</strong>
+                                                    </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -484,7 +488,7 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             <div id="schedule3_day2_main_time1" class="panel-collapse collapse in schedule-item-body">
                                                 <article>
                                                     <p class="description">Morning Yoga :)! Style and art to be confirmed.</p>
-                                                    <strong class="highlight speaker-name">To be confirmed.</strong>
+                                                    <strong class="highlight speaker-name">Sarah Jalali</strong>
                                                 </article>
                                             </div>
                                         </div>
@@ -518,8 +522,8 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day2_main_time3" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Handstand oriented "Warm up".</p>
-                                                    <strong class="highlight speaker-name">To be confirmed</strong>
+                                                    <p class="description">Dance and move all arround to Warm up :)!</p>
+                                                    <strong class="highlight speaker-name">Debora</strong>
                                                 </article>
                                             </div>
                                         </div>
@@ -536,9 +540,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day2_main_time4" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Content of bouth Workshops to be confirmed.</p>
-                                                    <strong class="highlight speaker-name">Teacher(s) 1: To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">Teacher(s) 2: To be confirmed</strong>
+                                                    <p class="description">Workshop 1: Acro Balance Standing Figures <br>
+                                                    <strong class="highlight speaker-name">Laura & Franzika</strong><br>
+                                                    Workshop 2: Slakro<br>
+                                                    <strong class="highlight speaker-name">Acrolama</strong>
+                                                    </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -589,9 +595,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day2_main_time7" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                        <p class="description"> Content to be confirmed.</p>
-                                                    <strong class="highlight speaker-name">Teacher 1: To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">Teacher 2: To be confirmed</strong>
+                                                        <p class="description">Workshop 1: AcroYoga meets Partnering, Dance your Acro<br>
+                                                        <strong class="highlight speaker-name">Salvatore & Debora</strong><br>
+                                                        Workshop 2: Animal fun and flow<br>
+                                                    <strong class="highlight speaker-name">Philipp & Kath</strong>
+                                                        </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -607,9 +615,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day2_main_time8" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                        <p class="description"> Content to be confirmed.</p>
-                                                    <strong class="highlight speaker-name">Teacher 1: To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">Teacher 2: To be confirmed</strong>
+                                                        <p class="description"> Workshop 1: Shoulder Stands<br>
+                                                        <strong class="highlight speaker-name">Pau & Mäd</strong><br>
+                                                        Workshop 2: Acro Dance / Tanzakrobatik<br>
+                                                        <strong class="highlight speaker-name">Jeanine</strong><br>
+                                                        </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -625,7 +635,7 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day2_main_time9" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                        <p class="description"> Content to be confirmed.</p>
+                                                        <p class="description"></p>
                                                 </article>
                                             </div>
                                         </div>
@@ -637,11 +647,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day2_main_timeline" href="#schedule3_day2_main_time10" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>20:00</strong>
-                                                <h6 class="title">Live Band - Party<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Ecstatic Dance ... Party !<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day2_main_time10" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                        <p class="description">Party Time! Live band outdoor, till 22:00 then we move inside to continue :)!</p>
+                                                        <p class="description">We start arround 20:00 till arround 24:00 to dance out all we can! ;)</p>
                                                 </article>
                                             </div>
                                         </div>
@@ -683,7 +693,7 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             <div id="schedule3_day3_main_time1" class="panel-collapse collapse in schedule-item-body">
                                                 <article>
                                                     <p class="description">Led yoga class for the early birds!</p>
-                                                    <strong class="highlight speaker-name">To be confirmed</strong>
+                                                    <strong class="highlight speaker-name">Larissa</strong>
                                                 </article>
                                             </div>
                                         </div>
@@ -718,7 +728,7 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             <div id="schedule3_day3_main_time3" class="panel-collapse collapse schedule-item-body">
                                                 <article>
                                                     <p class="description">Because, belive us, you can never do enough handstands :)! </p>
-                                                    <strong class="highlight speaker-name">To be confirmed</strong>
+                                                    <strong class="highlight speaker-name">Pau & Mäd</strong>
                                                 </article>
                                             </div>
                                         </div>
@@ -735,10 +745,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day3_main_time4" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Content to be confirmed</p>
-                                                    <strong class="highlight speaker-name">Teacher 1: To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">Teacher 2: To be confirmed</strong>
-
+                                                        <p class="description">Workshop 1: Press it Up!<br>
+                                                        <strong class="highlight speaker-name">Teacher 1: Salvatore</strong><br>
+                                                        Workshop 2: Bulk
+                                                    <strong class="highlight speaker-name">Pau & Mäd</strong>
+                                                    </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -772,10 +783,11 @@ students. Why lama? Cause like, Who doesn't like lamas!?</p>
                                             </a>
                                             <div id="schedule3_day3_main_time6" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Content to be confirmed</p>
-                                                    <strong class="highlight speaker-name">Teacher 1: To be confirmed</strong>
-                                                    <strong class="highlight speaker-name">Teacher 2: To be confirmed</strong>
-
+                                                        <p class="description">Workshop 1: Icarian Games<br>
+                                                        <strong class="highlight speaker-name">Acrolama</strong><br>
+                                                        Workshop 2: The Surprise Workshop<br>
+                                                    <strong class="highlight speaker-name">ALL</strong>
+                                                    </p>
                                                 </article>
                                             </div>
                                         </div>
