Winter Acro css

--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -217,4 +217,4 @@
                     </div>
                     {% include 'snippets/footer.html' %}
             </div>
-{% endblock %}
+{% endblock content %}
