--- a/fest/templates/snippets/jsfest.html
+++ b/fest/templates/snippets/jsfest.html
@@ -4,5 +4,5 @@
     <script src="{% static "fest/js/jquery.scrolly.min.js"%}"></script>
     <script src="{% static "fest/js/skel.min.js"%}"></script>
     <script src="{% static "fest/js/util.js"%}"></script>
-	<!--[if lte IE 8]><script src="{% static "fest/js/ie/respond.min.js"></script><![endif]-->
+    <!--[if lte IE 8]><script src="{% static "fest/js/ie/respond.min.js" %}></script><![endif]-->
     <script src="{% static "fest/js/main.js"%}"></script>
