--- a/fest/templates/basefest.html
+++ b/fest/templates/basefest.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:url" content="https://acrolama.com/" />
         <meta property="og:title" content="Winter Acro Festival" />
-        <meta property="og:image" content="{% static "fest/images/banner.jpg"%}"/>
-		{% include 'snippets/cssfest.html' %}
+        <meta property="og:image" content="{% static 'fest/images/banner.jpg' %}"/>
+		    {% include 'snippets/cssfest.html' %}
 	</head>
     <body>
             {% block content %}{% endblock content %}
