--- a/acrofestival/templates/pages/frontpage.html
+++ b/acrofestival/templates/pages/frontpage.html
@@ -6,7 +6,7 @@
 		<article>
         <a href="{% url 'winteracro'%}">
 			<h1>Winter Acro Festival</h1>
-            <h1 style="font-size:2rem;">25-30 Feb. 2018</h1>
+            <h1 style="font-size:2rem;">22. - 27. Feb. 2019</h1>
             <a href="{% url 'winteracro'%}" class="xop-button">Enter</a>
         </a>
 		</article>
