--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -21,18 +21,22 @@
                             <h2>What's it all about</h2>
                         </header>
                             <p>
-                            Welcome!</br> We'd like to invite you to the 2th Version of the Winter Acro Festival in
+                            Welcome!</br> We'd like to invite you to the 2nd version of the Winter Acro Festival in
                             Lenk, Switzerland. It's going to take place from:</br>
                             <u>22 till 27 of February 2019</u></br>
-                            With the experience of 2018 we made some upgrades!:</br>
-                            For starters it's going to be <u>6 days of Festival with 11 Rounds of Acro Workshops</u>
-                            with handpicked teachers, but more about them later :).
-                            There are some additional Handstands, Yoga and Thai Massage classes planned ;). And since
-                            we're in the mountains, and it's winter, we'll add some Snow related activities. To close
-                            this year to relax - after hard training - we have Saunas you can enjoy in the evening.</br>
+                            With the experience of 2018 we made some upgrades:
+                            For starters we have <u>6 days of festival, 11 rounds of acro workshops</u>
+                            and handpicked teachers, but more about them later :).
+                            There are some additional handstands, yoga and thai massage classes planned ;).
+                            Since we're in the mountains we'll add some <u>snow activities</u>. To close,
+                            this year - after hard training - we have saunas you can enjoy in the evening.</br>
                             </p>
                         <ul class="actions">
-                                <li><a href="{% url "winterform"%}" class="button">Register</a></li>
+                                <li>
+                                        <a style="background:#f3d216;" href="{% url "winterform"%}"
+                                                class="button">Register
+                                        </a>
+                                </li>
                         </ul>
                     </div>
                     <span class="image"><img src="{% static "fest/images/pic01.jpg"%}" alt="" /></span>
@@ -48,8 +52,8 @@
                         <span class="icon major style1 fa-bed"></span>
                         <h3>Accommodation</h3>
                         <p>
-                        This year the dorms are 4 Min. walk from the Hall - No LamaAirlines, sorry :C -. Important is
-                        you bring your sleeping bags! *Not included in single day tickets.
+                        This year the dorms are 4 min. walk from the hall - No LamaAirlines, sorry :( -. Important is
+                        that you bring your own sleeping bags! *Accommodation is not included in single day tickets.
                         More <u>important details</u>:</br></br>
                         <a class="button" href="{% url 'winterlocation'%}#accommodation">CLICK HERE</a>
                         </p>
@@ -58,19 +62,19 @@
                         <span class="icon major style3 fa-cutlery"></span>
                         <h3>Food</h3>
                         <p>
-                        Food plays an important roll. Main dishes, healthy snacks and fruits are all Bio, mostly
-                        local and vegan. <u>Please note that there will be some help asked from everyone arround
-                        small kitchen tasks.</u></br></br>
-                        <a class="button" href="">Info about Food</a>
+                        Food plays an important roll in this Festival. Main dishes, healthy snacks and fruits are all
+                        Bio, mostly local, vegan and cooked with love.</br>* <u>Please note that there will be some help
+                        asked from everyone arround small kitchen tasks.</u></br></br>
+                        <a class="button" href="">COOKING TEAM</a>
                         </p>
                         </li>
                     <li>
                         <span class="icon major style5 fa-cog"></span>
                         <h3>Workshops</h3>
                         <p>
-                        There'll be 11 rounds of acro workshops and space for a constant jam. Experience in Acro is
-                        important for your own enojoyment. <u>There will be no Beginner Workshops</u>.</br></br>
-                        <a class="button" href="#workshops">Workshop List</a>
+                        There'll be 11 rounds of acro workshops and space for a constant jam. Experience in acro is
+                        important for your own enojoyment.</br>* <u>There will be no beginner workshops</u>.</br></br>
+                        <a class="button" href="#workshops">TEACHERS</a>
                         </p>
                     </li>
                     <li>
@@ -79,8 +83,8 @@
                         <p>
                         On monday noon ther's an out-door <u>snow event up on the mountain</u> in the ski resort.
                         (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>).
-                        <u>Sauna to relax and an open stage</u> to share your talents. As an EXTRA, we could organise
-                        a day Ski ticket for you.
+                        <u>Sauna to relax and an open stage</u> to share your talents.</br>* As an <u>EXTRA</u>,
+                        we could organise a day ski ticket for you.
                         </p>
                     </li>
                     <li>
@@ -89,27 +93,30 @@
                         <p>
                         This Festival takes place in Lenk im Simmental, Switzerland. A complete description on how to
                         get there can be found in the following link:</br></br>
-                        <a href="{% url 'winterlocation'%}#location">CLICK HERE</a>
+                        <a class="button" href="{% url 'winterlocation'%}#location">CLICK HERE</a>
                         </p>
                         </li>
                     <li>
                         <span class="icon major style2 fa-money"></span>
                         <h3>Prices</h3>
                         <p>
-                        We have tickets based on the amount of days you stay at the festival. All of them include:</br>
-                        Accomodation, food, workshops, local train and mountain lift tickets.</br>
-                        <u>Single day tickets don't include breakfast</u>. More information, like complete list of
-                        prices and conditions can be found:</br></br>
-                        <a href="{% url 'winterprices'%}">CLICK HERE</a>
+                        We have tickets based on the amount of days you stay at the festival. All include:</br>
+                        Accomodation, food, workshops, local train and mountain lift ticket.</br>
+                        <u>Single day tickets don't include breakfast</u>. Conditions and Prices:</br></br>
+                        <a class="button" href="{% url 'winterprices'%}">CLICK HERE</a>
                         </p>
                 </ul>
                 <footer class="major">
                     <ul class="actions">
-                            <li><a href="{% "winterform"%}" class="button">Read Enough? Register HERE</a></li>
+                            <li>
+                            <a style="box-shadow: 0px 0px; background:#f3d216;" href="{% url "winterform"%}"
+                                    class="button">Read Enough? Register HERE
+                            </a>
+                            </li>
                     </ul>
                 </footer>
             </section>
-            <section id="second" class="main special">
+            <section id="schedule" class="main special">
                 <header class="major">
                     <h2>Schedule</h2>
                     <p> A general time plan for the event</p>
