--- a/fest/templates/snippets/navhome.html
+++ b/fest/templates/snippets/navhome.html
@@ -2,9 +2,9 @@
             <ul>
               <li><a href="{% url 'winteracro' %}">Home</a></li>
               <li><a href="{% url 'winteracro' %}#intro" class="active">Introduction</a></li>
-              <li><a href="{% url 'winteracro' %}#first">Information</a></li>
-              <li><a href="{% url 'winteracro' %}#second">Schedule</a></li>
-              <li><a href="{% url 'winterform'%}">Register</a></li>
+              <li><a href="{% url 'winteracro' %}#info">Information</a></li>
+              <li><a href="{% url 'winteracro' %}#schedule">Schedule</a></li>
+              <li><a style="background:#f3d216;" href="{% url 'winterform'%}">Register</a></li>
             </ul>
           </nav>
 
