--- a/fest/templates/snippets/navnothome.html
+++ b/fest/templates/snippets/navnothome.html
@@ -1,8 +1,8 @@
           <nav id="nav">
             <ul>
-              <li><a href="{% url 'winteracro'%}/#intro" class="active">Introduction</a></li>
-              <li><a href="/#first">Information</a></li>
-              <li><a href="/#second">Schedule</a></li>
-              <li><a href="{% url 'winterform'%}">Register</a></li>
+              <li><a href="{% url 'winteracro' %}#intro" class="active">Introduction</a></li>
+              <li><a href="#info">Information</a></li>
+              <li><a href="#schedule">Schedule</a></li>
+              <li><a style="background: #f3d216;" href="{% url 'winterform'%}">Register</a></li>
             </ul>
           </nav>
