--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -59,7 +59,7 @@
                         </p>
                     </li>
                     <li>
-                        <span class="icon major style3 fa-cutlery"></span>
+                        <span class="icon major style3 fa-utensils"></span>
                         <h3>Food</h3>
                         <p>
                         Food plays an important roll in this Festival. Main dishes, healthy snacks and fruits are all
@@ -69,7 +69,7 @@
                         </p>
                         </li>
                     <li>
-                        <span class="icon major style5 fa-cog"></span>
+                        <span class="icon major style5 fa-cogs"></span>
                         <h3>Workshops</h3>
                         <p>
                         There'll be 11 rounds of acro workshops and space for a constant jam. Experience in acro is
@@ -78,7 +78,7 @@
                         </p>
                     </li>
                     <li>
-                        <span class="icon major style6 fa-snowflake-o"></span>
+                        <span class="icon major style3 fa-snowflake"></span>
                         <h3>Special events</h3>
                         <p>
                         On monday noon ther's an out-door <u>snow event up on the mountain</u> in the ski resort.
@@ -88,7 +88,7 @@
                         </p>
                     </li>
                     <li>
-                        <span class="icon major style4 fa-map-marker"></span>
+                        <span class="icon major style2 fa-map-marker"></span>
                         <h3>Location</h3>
                         <p>
                         This Festival takes place in Lenk im Simmental, Switzerland. A complete description on how to
@@ -97,7 +97,7 @@
                         </p>
                         </li>
                     <li>
-                        <span class="icon major style2 fa-money"></span>
+                        <span class="icon major style1 fa-money-bill-wave"></span>
                         <h3>Prices</h3>
                         <p>
                         We have tickets based on the amount of days you stay at the festival. All include:</br>
@@ -119,7 +119,7 @@
             <section id="schedule" class="main special">
                 <header class="major">
                     <h2>Schedule</h2>
-                    <p> Some changes are to be expected, but it's our best aproximation at this time :)</p>
+                    <p> Some changes are to be expected, but it's our best approximation at this time :)</p>
                 </header>
                     <h2>Friday</h2>
                     <ul class="statistics">
