--- a/fest/templates/snippets/jsfest.html
+++ b/fest/templates/snippets/jsfest.html
@@ -1,4 +1,7 @@
     {% load static %}
+    <script type="text/javascript">
+      window.FontAwesomeConfig = { autoReplaceSvg: false }
+    </script>
     <script src="{% static "fest/js/jquery.min.js"%}"></script>
     <script src="{% static "fest/js/jquery.scrollex.min.js"%}"></script>
     <script src="{% static "fest/js/jquery.scrolly.min.js"%}"></script>
@@ -6,3 +9,5 @@
     <script src="{% static "fest/js/util.js"%}"></script>
     <!--[if lte IE 8]><script src="{% static "fest/js/ie/respond.min.js" %}></script><![endif]-->
     <script src="{% static "fest/js/main.js"%}"></script>
+    <script src="{% static "fest/js/fontawesome.js"%}"></script>
+    <script src="{% static "fest/js/v4-shims.js"%}"></scripts>
