--- a/formulario/templates/baseform.html
+++ b/formulario/templates/baseform.html
@@ -11,6 +11,7 @@
       <meta name="author" content="Acrolama" />
         {% include 'snippets/cssform.html' %}
 
+        <!--Here is the head-->
   </head>
     <body>
             {% block content %}{% endblock content %}
