--- a/formulario/templates/baseform.html
+++ b/formulario/templates/baseform.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no.js">
   <head>
+    {% load i18n %}
     {% load static %}
     <meta charset="UTF-9" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
