Corrected .ico error

--- a/formulario/templates/baseform.html
+++ b/formulario/templates/baseform.html
@@ -10,15 +10,7 @@
       <meta name="description" content="Inscription system for Winter Acro Fest organized by Acrolama" />
       <meta name="keywords" content="Swiss Acro Festival, Acrolama" />
       <meta name="author" content="Acrolama" />
-        <link rel="shortcut icon" href="{% static "favicon.ico"%}"/>
-        <link rel="stylesheet" href="https://use.fontawesome.com/1391c0be18.css" />
-        <link rel="stylesheet" type="text/css" href="{% static "formulario/css/normalize.css"%}"/>
-        <link rel="stylesheet" type="text/css" href="{% static "formulario/css/demo.css"%}"/>
-        <link rel="stylesheet" type="text/css" href="{% static "formulario/css/component.css"%}"/>
-        <link rel="stylesheet" type="text/css" href="{% static "formulario/css/cs-select.css"%}"/>
-        <link rel="stylesheet" type="text/css" href="{% static "formulario/css/cs-skin-boxes.css"%}"/>
-        <script src="{% static "formulario/js/modernizr.custom.js"%}"></script>
-        <!--End of head is here-->
+      {% include 'snippets/cssform.html' %}
   </head>
     <body>
             {% block content %}{% endblock content %}
