--- a/fest/templates/prices.html
+++ b/fest/templates/prices.html
@@ -22,7 +22,7 @@
                         <ul>
                             <li>6 Days Pass: CHF 460.- / EUR 420.- </li>
                             <li>Weekend Pass(FR-SU): CHF 220.- / EUR 200.-</li>
-                            <li>Singel Day Ticket: CHF 85.-</li>
+                            <li>Single Day Ticket: CHF 85.-</li>
                         </ul>
                         <h3>Payment Methods</h3>
                         <p> We will send you the Bank Details after you Register in the
