--- a/formulario/static/formulario/css/component.css
+++ b/formulario/static/formulario/css/component.css
@@ -51,7 +51,7 @@
 	padding: 2.5em 30% 6em;
 	width: 100%;
 	height: 100%;
-	background: #fdc516;
+	background: #f3d216;
 	color: #fff;
 	font-size: 1.2em;
 }
@@ -59,7 +59,7 @@
 .fs-form-overview .fs-fields::before {
 	display: block;
 	margin-bottom: 2.5em;
-	color: #fdc516;
+	color: #f3d216;
 	content: 'Review & Submit';
 	font-weight: 700;
 	font-size: 1.85em;
@@ -268,11 +268,11 @@ button.fs-continue,
 }
 
 .fs-fields input:focus {
-	background-color: #fdc516; /* Fixes chrome bug with placeholder */
+	background-color: #f3d216; /* Fixes chrome bug with placeholder */
 }
 
 .fs-form-overview .fs-fields input:focus {
-	background-color: #fdc516; /* Fixes chrome bug with placeholder */
+	background-color: #f3d216; /* Fixes chrome bug with placeholder */
 }
 
 .fs-form-overview .fs-fields input {
@@ -411,7 +411,7 @@ button.fs-continue,
 }
 
 .fs-form-overview .fs-fields textarea:focus {
-	background: #fdc516;
+	background: #f3d216;
 }
 
 .fs-form div.cs-select.cs-skin-boxes {
