--- a/formulario/static/formulario/css/demo.css
+++ b/formulario/static/formulario/css/demo.css
@@ -19,7 +19,7 @@ html, body, .container {
 }
 
 body {
-	background: #fdc516;
+	background: #f3d216;
 	color: #fff;
 	font-weight: 400;
 	font-size: 1em;
